--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#090c10" />
+    <meta name="theme-color" content="#161b22" />
     <meta
       name="description"
       content="David Oluseun is a front-end web developer who specializes in building user interfaces using React."
